Update for 0.17.0 release

--- a/app_todos.html
+++ b/app_todos.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="vendor/google-code-prettify/prettify.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/layout_components.css">
-    <script type="application/javascript" src="vendor/js/jquery-1.8.0.js"></script>
+    <script type="application/javascript" src="vendor/js/jquery-1.9.1.js"></script>
     <link rel="stylesheet" href="css/tutorial.css">
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.8.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.17.0.js"></script>
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="js/stylecode.js"></script>
@@ -32,23 +32,27 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="doc/index.html">API</a></li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Getting Started<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Components<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="components_backbone_relational.html">Backbone Relational</a><a href="components_backbone_modelref.html">Backbone ModelRef</a><a href="components_knockback_inspector.html">Knockback Inspector</a><a href="components_knockback_navigators.html">Knockback Navigators</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="components_backbone_relational.html">Backbone Relational</a><a href="components_backbone_modelref.html">Backbone ModelRef</a><a href="components_knockback_inspector.html">Knockback Inspector</a><a href="components_knockback_navigators.html">Knockback Navigators</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Applications<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="app_knockback_reference.html">Knockback Reference App</a><a href="app_todos.html">Todos App</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="app_knockback_reference.html">Knockback Reference App</a><a href="app_todos.html">Todos App</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    </li>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -76,34 +80,25 @@
       <header class="page">
       </header>
       <content class="page"><h1>Tutorial: Knockback Todos App</h1>
-<p><a href="http://kmalakoff.github.com/knockback-todos-app/">Try the demo</a> or <a href="https://github.com/kmalakoff/knockback-todos-app">Look at the Code</a>
-
-</p>
+<p><a href="http://kmalakoff.github.com/knockback-todos-app/">Try the demo</a> or <a href="https://github.com/kmalakoff/knockback-todos-app">Look at the Code</a></p>
 <h2>Todos Architecture</h2>
 <h3>Knockback follows the MVVM Pattern</h3>
-<p>With the MVVM pattern, instead of Model, View, Controller you use Model, View, ViewModel. As an simple approximation using MVC terminology:
-
-</p>
+<p>With the MVVM pattern, instead of Model, View, Controller you use Model, View, ViewModel. As an simple approximation using MVC terminology:</p>
 <ul>
 <li>Models are handled by Backbone.Models and Backbone.Collections</li>
 <li>Views are handled by Templates (inline or jQuery)</li>
 <li>ViewModels take the place of Controllers</li>
 </ul>
 <h3>Knockback ViewModel Injection</h3>
-<p>Like <a href="http://angularjs.org/">AngularJS</a>, Knockback.js provides a mechanism through the <code>kb-inject</code> attribute or the data-bind <code>inject</code> Knockback custom binding to bind HTML Views without a central application control point.
-</p>
+<p>Like <a href="http://angularjs.org/">AngularJS</a>, Knockback.js provides a mechanism through the <code>kb-inject</code> attribute or the data-bind <code>inject</code> Knockback custom binding to bind HTML Views without a central application control point.</p>
 
         <pre>&lt;section id=&quot;todoapp&quot; kb-inject=&quot;AppViewModel&quot;&gt;
   &lt;header id=&quot;header&quot;&gt;
   ...
 &lt;/section&gt;
-</pre><p>Please look at the <a href="doc/classes/kb.html#injectViewModels-class">API Documentation</a> or the <a href="tutorial_inject.html">ViewModel Injection Tutorial</a> for more information and examples.
-
-</p>
+</pre><p>Please look at the <a href="doc/classes/kb.html#injectViewModels-class">API Documentation</a> or the <a href="tutorial_inject.html">ViewModel Injection Tutorial</a> for more information and examples.</p>
 <h2>MVVM in &quot;Todos - Classic&quot;</h2>
-<p>The Classic application is an upgraded port of the Backbone Todos application so it has the same ORM with Todo (Backbone.Model) and TodoCollection (Backbone.Collection), but the application&#39;s Views are controlled by two ViewModels (AppViewModel and TodoViewModel).
-
-</p>
+<p>The Classic application is an upgraded port of the Backbone Todos application so it has the same ORM with Todo (Backbone.Model) and TodoCollection (Backbone.Collection), but the application&#39;s Views are controlled by two ViewModels (AppViewModel and TodoViewModel).</p>
 <h3>Models (Backbone.Model + Backbone.Collection)</h3>
 <ul>
 <li><strong>Todo:</strong> provides the data and operations for a Todo like setting its complete state and saving changes on the server/local-storage.</li>
@@ -117,9 +112,7 @@
 </li>
 </ul>
 <h2>MVVM in &quot;Todos - Extended&quot;</h2>
-<p>This application extends the &quot;Todos - Classic&quot; by adding settings including todo priorities (display colors and orders), language selection and localized text, adding todos list sorting options (by name, created date, and priority). Along with the following changes:
-
-</p>
+<p>This application extends the &quot;Todos - Classic&quot; by adding settings including todo priorities (display colors and orders), language selection and localized text, adding todos list sorting options (by name, created date, and priority). Along with the following changes:</p>
 <h3>Models (Backbone.Model + Backbone.Collection)</h3>
 <ul>
 <li><p><strong>Priority:</strong> provides the data for the priority and color information that is saved on the server/local-storage. It could be a generic Backbone.Model but for clarity and consistency with the mock up, it is given a class.</p>
@@ -135,12 +128,8 @@
 </li>
 </ul>
 <h3>Localization</h3>
-<p>Localization is key for the global applications we create today. It should not be an afterthought!
-
-</p>
-<p>Knockback does not provide a locale manager (although there is a sample implementation with this todos application in: models/locale_manager.coffee) because different applications will retrieve their localized strings in different ways. Instead, Knockback provides a localization pattern by using a simpified Backbone.Model-like signature that hooks into Knockback like any other model:
-
-</p>
+<p>Localization is key for the global applications we create today. It should not be an afterthought!</p>
+<p>Knockback does not provide a locale manager (although there is a sample implementation with this todos application in: models/locale_manager.coffee) because different applications will retrieve their localized strings in different ways. Instead, Knockback provides a localization pattern by using a simpified Backbone.Model-like signature that hooks into Knockback like any other model:</p>
 <ul>
 <li>Emulate a simplified Backbone.Model through a get method like &quot;get: (string_id) -&gt; ...&quot;</li>
 <li>Mixin Backbone.Events &#39;_.extend(LocaleManager.prototype, Backbone.Events)&#39; and trigger Backbone.Events &#39;change&#39; and &#39;change:string_id&#39; like:</li>
@@ -153,14 +142,12 @@
 for (var key in this.translations_by_locale[this.locale_identifier]) {
   this.trigger(&quot;change:#{key}&quot;, this.translations_by_locale[this.locale_identifier][key]);
 }
-</pre><p>Register your custom locale manager like:
-</p>
+</pre><p>Register your custom locale manager like:</p>
 
         <pre data-for="cs">kb.locale_manager = new MyLocaleManager()
 </pre>
         <pre data-for="js">kb.locale_manager = new MyLocaleManager();
-</pre><p>Also, if you want to perform some specialized formatting above and beyond a string lookup, you can provide custom localizer classes derived from kb.LocalizedObservable:
-</p>
+</pre><p>Also, if you want to perform some specialized formatting above and beyond a string lookup, you can provide custom localizer classes derived from kb.LocalizedObservable:</p>
 
         <pre data-for="cs">class LongDateLocalizer extends kb.LocalizedObservable
   constructor: -&gt; return super
@@ -185,11 +172,8 @@ for (var key in this.translations_by_locale[this.locale_identifier]) {
     return value.setTime(new_value.valueOf());
   }
 });
-</pre><p><strong>Note:</strong> kb.LocalizedObservable&#39;s constructor actually returns a ko.computed (not the instance itself) so you either need to return super result or if you have custom initialization, return the underlying observable using the following helper: &#39;kb.wrappedObservable(this)&#39;
-
-</p>
-<p>You can simply watch an attribute on the locale manager as follows:
-</p>
+</pre><p><strong>Note:</strong> kb.LocalizedObservable&#39;s constructor actually returns a ko.computed (not the instance itself) so you either need to return super result or if you have custom initialization, return the underlying observable using the following helper: &#39;kb.wrappedObservable(this)&#39;</p>
+<p>You can simply watch an attribute on the locale manager as follows:</p>
 
         <pre data-for="cs">AppViewModel = -&gt;
   ...
@@ -199,8 +183,7 @@ for (var key in this.translations_by_locale[this.locale_identifier]) {
   ...
   this.input_placeholder_text = kb.observable(kb.locale_manager, {key: 'placeholder_create'});
 };
-</pre><p>Or model attributes can be localized automatically when your locale manager triggers a change:
-</p>
+</pre><p>Or model attributes can be localized automatically when your locale manager triggers a change:</p>
 
         <pre data-for="cs">TodoViewModel = (model) -&gt;
   ...
@@ -211,11 +194,8 @@ for (var key in this.translations_by_locale[this.locale_identifier]) {
   this.completed = kb.observable(model, {key: 'completed', localizer: LongDateLocalizer});
 };
 </pre><h2>Lazy Loading</h2>
-<p>By using Knockback with <a href="https://github.com/kmalakoff/backbone-modelref">Backbone.ModelRef</a>, you can start rendering your views before the models are loaded.
-
-</p>
-<p>As demonstration, you can see that the colors arrive a little after the rendering. It is achieved by passing model references instead of models to the settings view model:
-</p>
+<p>By using Knockback with <a href="https://github.com/kmalakoff/backbone-modelref">Backbone.ModelRef</a>, you can start rendering your views before the models are loaded.</p>
+<p>As demonstration, you can see that the colors arrive a little after the rendering. It is achieved by passing model references instead of models to the settings view model:</p>
 
         <pre data-for="cs">SettingsViewModel = (priorities) -&gt;
   @priorities = ko.observableArray(_.map(priorities, (model)-&gt; return new PrioritiesViewModel(model)))
@@ -234,8 +214,7 @@ window.app.viewmodels.settings = new SettingsViewModel([
   new Backbone.ModelRef(priorities, 'medium'),
   new Backbone.ModelRef(priorities, 'low')
 ]);
-</pre><p>and then lazy fetching them (which creates them if they don&#39;t exist):
-</p>
+</pre><p>and then lazy fetching them (which creates them if they don&#39;t exist):</p>
 
         <pre data-for="cs"># Load the prioties late to show the dynamic nature of Knockback with Backbone.ModelRef
 _.delay((-&gt;
