--- a/getting_started_knockback_basics.html
+++ b/getting_started_knockback_basics.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="vendor/google-code-prettify/prettify.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/layout_components.css">
-    <script type="application/javascript" src="vendor/js/jquery-1.8.0.js"></script>
+    <script type="application/javascript" src="vendor/js/jquery-1.9.1.js"></script>
     <link rel="stylesheet" href="css/tutorial.css">
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.8.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.17.0.js"></script>
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="js/stylecode.js"></script>
@@ -32,23 +32,27 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="doc/index.html">API</a></li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Getting Started<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Components<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="components_backbone_relational.html">Backbone Relational</a><a href="components_backbone_modelref.html">Backbone ModelRef</a><a href="components_knockback_inspector.html">Knockback Inspector</a><a href="components_knockback_navigators.html">Knockback Navigators</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="components_backbone_relational.html">Backbone Relational</a><a href="components_backbone_modelref.html">Backbone ModelRef</a><a href="components_knockback_inspector.html">Knockback Inspector</a><a href="components_knockback_navigators.html">Knockback Navigators</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Applications<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="app_knockback_reference.html">Knockback Reference App</a><a href="app_todos.html">Todos App</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="app_knockback_reference.html">Knockback Reference App</a><a href="app_todos.html">Todos App</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    </li>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -99,23 +103,23 @@
 </pre>
                 </div>
                 <div id="kb_observable_view_model" class="tab-pane">
-                  <pre data-for="cs">model = new Backbone.Model({first_name: "Planet", last_name: "Earth"})
+                  <pre data-for="cs">model = new Backbone.Model({first_name: &quot;Planet&quot;, last_name: &quot;Earth&quot;})
 
-ViewModel = (model) ->
+ViewModel = (model) -&gt;
   @first_name = kb.observable(model, 'first_name')
   @last_name = kb.observable(model, 'last_name')
-  @full_name = ko.computed((->return "#{this.first_name()} #{this.last_name()}"), @)
+  @full_name = ko.computed((-&gt;return &quot;#{this.first_name()} #{this.last_name()}&quot;), @)
   return
 
 view_model = new ViewModel(model)
 
 ko.applyBindings(view_model, $('#kb_observable')[0])</pre>
-                  <pre data-for="js">var model = new Backbone.Model({first_name: "Planet", last_name: "Earth"});
+                  <pre data-for="js">var model = new Backbone.Model({first_name: &quot;Planet&quot;, last_name: &quot;Earth&quot;});
 
 var ViewModel = function(model) {
   this.first_name = kb.observable(model, 'first_name');
   this.last_name = kb.observable(model, 'last_name');
-  this.full_name = ko.computed((function() {return "" + (this.first_name()) + " " + (this.last_name());}), this);
+  this.full_name = ko.computed((function() {return &quot;&quot; + (this.first_name()) + &quot; &quot; + (this.last_name());}), this);
 };
 
 var view_model = new ViewModel(model);
@@ -153,16 +157,16 @@ ko.applyBindings(view_model, $('#kb_observable')[0]);</pre>
 &lt;/div&gt;</pre>
                 </div>
                 <div id="kb_view_model_computed_view_model" class="tab-pane">
-                  <pre data-for="cs">model = new Backbone.Model({first_name: "Planet", last_name: "Earth"})
+                  <pre data-for="cs">model = new Backbone.Model({first_name: &quot;Planet&quot;, last_name: &quot;Earth&quot;})
 
 view_model = kb.viewModel(model)
-view_model.full_name = ko.computed((->return "#{@first_name()} #{@last_name()}"), view_model)
+view_model.full_name = ko.computed((-&gt;return &quot;#{@first_name()} #{@last_name()}&quot;), view_model)
 
 ko.applyBindings(view_model, $('#kb_view_model_computed')[0])</pre>
-                  <pre data-for="js">var model = new Backbone.Model({first_name: "Planet", last_name: "Earth"});
+                  <pre data-for="js">var model = new Backbone.Model({first_name: &quot;Planet&quot;, last_name: &quot;Earth&quot;});
 
 var view_model = kb.viewModel(model);
-view_model.full_name = ko.computed((function() {return "" + (this.first_name()) + " " + (this.last_name());}), view_model);
+view_model.full_name = ko.computed((function() {return &quot;&quot; + (this.first_name()) + &quot; &quot; + (this.last_name());}), view_model);
 
 ko.applyBindings(view_model, $('#kb_view_model_computed')[0]);</pre>
                 </div>
@@ -181,13 +185,13 @@ ko.applyBindings(view_model, $('#kb_view_model_computed')[0]);</pre>
           </div>
           <h2>Using with a Backbone.Collection</h2>
           <h3>Create a kb.ViewModel automatically for each model in a collection:</h3>
-          <p><span>In Knockback.js, a</span><a href="doc/classes/kb/CollectionObservable.html">kb.CollectionObservable</a><span> can be used with a Backbone.Collection for many different purposes</span>
+          <p><span>In Knockback.js, a</span><a href="doc/classes/kb/CollectionObservable.html"> kb.CollectionObservable</a><span> can be used with a Backbone.Collection for many different purposes</span>
             <ul>
               <li><span>generating/maintaining a sorted ko.observableArray of ViewModels for a list view</span></li>
-              <li><span>rendering</span><a href="tutorial_relational_models.html">relationships between models</a></li>
-              <li><span>providing a selection list for</span><a href="http://knockoutjs.com/documentation/selectedOptions-binding.html">a selectedOptions binding</a><span>using Knockout.js</span></li>
-              <li><span>to</span><a href="doc/classes/kb/CollectionObservable.html#sorted_index">sort the Backbone.Models</a><span> in a way distinctive to the Backbone.Collection models array</span></li>
-              <li><span>to<a href="https://github.com/kmalakoff/knockback-todos/blob/master/app/todos-classic/src/viewmodels/footer.coffee">update model counts automatically</a></span><span> when the model count changes</span></li>
+              <li><span>rendering</span><a href="tutorial_relational_models.html"> relationships between models</a></li>
+              <li><span>providing a selection list for</span><a href="http://knockoutjs.com/documentation/selectedOptions-binding.html"> a selectedOptions binding</a><span> using Knockout.js</span></li>
+              <li><span>to</span><a href="doc/classes/kb/CollectionObservable.html#sorted_index"> sort the Backbone.Models</a><span> in a way distinctive to the Backbone.Collection models array</span></li>
+              <li><span>to<a href="https://github.com/kmalakoff/knockback-todos/blob/master/app/todos-classic/src/viewmodels/footer.coffee.txt"> update model counts automatically</a></span><span> when the model count changes</span></li>
               <li>and many more!</li>
             </ul>
           </p>
