--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="vendor/google-code-prettify/prettify.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/layout_components.css">
-    <script type="application/javascript" src="vendor/js/jquery-1.8.0.js"></script>
+    <script type="application/javascript" src="vendor/js/jquery-1.9.1.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
@@ -29,23 +29,27 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="doc/index.html">API</a></li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Getting Started<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Components<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="components_backbone_relational.html">Backbone Relational</a><a href="components_backbone_modelref.html">Backbone ModelRef</a><a href="components_knockback_inspector.html">Knockback Inspector</a><a href="components_knockback_navigators.html">Knockback Navigators</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="components_backbone_relational.html">Backbone Relational</a><a href="components_backbone_modelref.html">Backbone ModelRef</a><a href="components_knockback_inspector.html">Knockback Inspector</a><a href="components_knockback_navigators.html">Knockback Navigators</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Applications<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="app_knockback_reference.html">Knockback Reference App</a><a href="app_todos.html">Todos App</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="app_knockback_reference.html">Knockback Reference App</a><a href="app_todos.html">Todos App</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    </li>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -100,6 +104,7 @@
                 <p>Knockback is compatible with the following components:</p>
                 <ul>
                   <li><a href="https://github.com/PaulUithol/Backbone-relational/">Backbone-Relational</a></li>
+                  <li><a href="https://www.parse.com/">Parse <strong>(new!)</strong></a></li>
                   <li><a href="https://github.com/kmalakoff/backbone-modelref">Backbone-ModelRef</a></li>
                   <li><a href="https://github.com/kmalakoff/knockback-inspector">Knockback-Inspector</a></li>
                   <li><a href="https://github.com/kmalakoff/knockback-navigators/">Knockback-Navigators</a></li>
@@ -108,7 +113,7 @@
             </div>
             <div class="content row">
               <div class="span7 wrapped">
-                <h2>Download Latest <small>0.16.8</small></h2>
+                <h2>Download Latest <small>0.17.0</small></h2>
                 <table class="table">
                   <thead>
                     <tr>
@@ -122,14 +127,14 @@
                       <td>Full</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback.js'>Development</a> <small>(dev, 64k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback.min.js'>Production</a> <small>(min+gzip, 8k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.0/knockback.js'>Development</a> <small>(dev, 82k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.0/knockback.min.js'>Production</a> <small>(min+gzip, 13k)</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-full-stack.js'>Development</a> <small>(dev, 330k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-full-stack.min.js'>Production</a> <small>(min+gzip, 32k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.0/knockback-full-stack.js'>Development</a> <small>(dev, 363k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.0/knockback-full-stack.min.js'>Production</a> <small>(min+gzip, 39k)</small></li>
                         </ul>
                       </td>
                     </tr>
@@ -137,14 +142,14 @@
                       <td>Core</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-core.js'>Development</a> <small>(dev, 54k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-core.min.js'>Production</a> <small>(min+gzip, 7k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.0/knockback-core.js'>Development</a> <small>(dev, 62k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.0/knockback-core.min.js'>Production</a> <small>(min+gzip, 10k)</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-core-stack.js'>Development</a> <small>(dev, 315k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.8/knockback-core-stack.min.js'>Production</a> <small>(min+gzip, 31k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.0/knockback-core-stack.js'>Development</a> <small>(dev, 343k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.0/knockback-core-stack.min.js'>Production</a> <small>(min+gzip, 36k)</small></li>
                         </ul>
                       </td>
                     </tr>
@@ -161,12 +166,9 @@
 <li><a href="http://nuget.org/packages/Knockback.js">NuGet Gallery</a></li>
 </ul>
 <h2>Source</h2>
-<p>You can find the source on <a href="https://github.com/kmalakoff/knockback">Github</a>. To provide feedback leave a message or <a href="https://github.com/kmalakoff/knockback/issues">create an issue</a>.
-
-</p>
+<p>You can find the source on <a href="https://github.com/kmalakoff/knockback">Github</a>. To provide feedback leave a message or <a href="https://github.com/kmalakoff/knockback/issues">create an issue</a>.</p>
 <h2>Release Notes</h2>
-<p>Please look at the <a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">release notes</a> if you are migrating from an earlier version.
-</p>
+<p>Please look at the <a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">release notes</a> if you are migrating from an earlier version.</p>
 
               </div>
             </div>
@@ -192,7 +194,7 @@
                   <td class="yes">Bullet-proof ORM</td>
                   <td class="done">&#9754;</td>
                   <td class="no">Weak ORM</td>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
                 </tr>
                 <tr>
                   <td class="yes">Built-in Serialization / Deserialization</td>
@@ -204,19 +206,19 @@
                   <td class="no"><abbr>MVC</abbr></td>
                   <td class="done">&#9755;</td>
                   <td class="yes"><abbr>MVVM</abbr></td>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
                 </tr>
                 <tr>
                   <td class="no">Low level DOM maninulation</td>
                   <td class="done">&#9755;</td>
                   <td class="yes">Reduced jQuery effort</td>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
                 </tr>
                 <tr>
                   <td class="no">Manual view updating</td>
                   <td class="done">&#9755;</td>
                   <td class="yes"><code>data-bind</code> based sorcery</td>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
                 </tr>
                 <tr>
                   <td class="yes">Routing and history support</td>
@@ -231,28 +233,28 @@
                   <td class="ref"><a title="View description" href="#comparison-3">3</a></td>
                 </tr>
                 <tr>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
                   <td class="own dependent">Cross-view Model state synchronization</td>
-                  <td class="hidden"></td>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
+                  <td class="skip-cell"></td>
                 </tr>
                 <tr>
                   <td class="no">Messy collection/view updating</td>
                   <td class="own">Fully sorted and updated collection views</td>
-                  <td class="hidden"></td>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
+                  <td class="skip-cell"></td>
                 </tr>
                 <tr>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
                   <td class="own">View settings and control properties</td>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
                   <td class="ref"><a title="View description" href="#comparison-4">4</a></td>
                 </tr>
                 <tr>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
                   <td class="own dependent">Localization</td>
-                  <td class="hidden"></td>
-                  <td class="hidden"></td>
+                  <td class="skip-cell"></td>
+                  <td class="skip-cell"></td>
                 </tr>
               </tbody>
             </table>
@@ -264,22 +266,16 @@
 <p>As you probably know, Backbone is known to have a fantastic syncing system built
 as close as possible to the RESTful pattern. And if this is not good for your
 application you can always opt to build a custom <code>Backbone.sync</code> or, if further
-granularity is required, you can customize a Model/Collection&#39;s own <code>sync</code> function.
-
-</p>
+granularity is required, you can customize a Model/Collection&#39;s own <code>sync</code> function.</p>
 <p>Knockout.js instead does not provide such a feature, and what it offers is a simple
-plugin to map into/from any JSON source.
-
-</p>
+plugin to map into/from any JSON source.</p>
 <p>Knockback uses Backbone&#39;s models and collections, and this means that all the
-serialization features we all love are still there!
-</p>
+serialization features we all love are still there!</p>
 
               </div>
               <div id="comparison-2"><h1>Routing</h1>
 <p>In Knockback, while using Knockout.js ViewModel pattern, we developed a full
-pattern that supports Backbone&#39;s routing solution.
-</p>
+pattern that supports Backbone&#39;s routing solution.</p>
 
               </div>
             </section>
@@ -287,26 +283,17 @@ pattern that supports Backbone&#39;s routing solution.
               <div id="comparison-3"><h1>(Im)proper use of tools</h1>
 <p>Too often, in a large Backbone application you find yourself building up views
 with too much logic in them, almost always requiring sub-state management. This is
-actually an improper use of views, which should be as logic-less as possible.
-
-</p>
+actually an improper use of views, which should be as logic-less as possible.</p>
 <p>But you <em>have</em> to do things like that, and Backbone doesn&#39;t help the developer
-solving this (ethical?) issue.
-
-</p>
+solving this (ethical?) issue.</p>
 <p>In Knockout.js, this is not a problem, because ViewModels differ from Views
 exactly in this: they own states, methods and properties allowing the <em>views</em> to
-be logic-less.
-
-</p>
+be logic-less.</p>
 <p>So Knockout solves the blurry View/Controller issue you&#39;ll find building large
 applications with Backbone. <strong>But</strong> because Knockout simply provides ViewModels and no
-Models, how can you build a proper MVC/MVVM? <em>Backbone to the rescue!</em>
-
-</p>
+Models, how can you build a proper MVC/MVVM? <em>Backbone to the rescue!</em></p>
 <p>And the circle is complete: Models from Backbone, and Views/ViewModels from
-Knockout.js.
-</p>
+Knockout.js.</p>
 
               </div>
             </section>
@@ -315,17 +302,12 @@ Knockout.js.
 <p>Following MVVM principles where a ViewModel is the &quot;View&#39;s Model&quot;, and therefore
 owns its own properties and methods which are <em>then</em> reflected in the View
 itself, Knockback ViewModels can add View setting and control properties, which are not
-(and should not be!) owned by the model.
-
-</p>
+(and should not be!) owned by the model.</p>
 <p>What does this allow? Actual settings (<em>eg</em> colors for different priorities in a
 task list) to be applied on all the associated ViewModels, or...something more
-interesting, like an design pattern for localization.
-
-</p>
+interesting, like an design pattern for localization.</p>
 <p>If you consider localized labels as observed properties, then you can understand
-how Knockback provides internationalization to your applications.
-</p>
+how Knockback provides internationalization to your applications.</p>
 
               </div>
             </section>
@@ -333,20 +315,22 @@ how Knockback provides internationalization to your applications.
           <div class="wrapped">
             <div class="row-fluid">
               <div class="span4"><h2>Projects</h2>
-<p><a href="https://github.com/kmalakoff/knockback-site/issues">Submit yours now</a>!
-</p>
+<ul>
+<li><a href="http://www.vidigami.com/">Vidigami</a></li>
+<li><a href="https://github.com/kmalakoff/knockback-site/issues">Submit yours now</a>!</li>
+</ul>
 
               </div>
               <div class="span3"><h2>Frameworks</h2>
 <ul>
 <li><a href="https://github.com/thedrow/django-knockback">django-knockback</a></li>
+<li><a href="http://pypi.python.org/pypi/js.knockback">js.knockback</a></li>
 <li><a href="https://github.com/skie/CakePHP-Knockback-Plugin">CakePHP-Knockback-Plugin</a></li>
 </ul>
 
               </div>
               <div class="span4"><h2>Community Extensions</h2>
-<p><a href="https://github.com/kmalakoff/knockback-site/issues">Submit yours now</a>!
-</p>
+<p><a href="https://github.com/kmalakoff/knockback-site/issues">Submit yours now</a>!</p>
 
               </div>
             </div>
@@ -354,11 +338,8 @@ how Knockback provides internationalization to your applications.
         </section>
       </content>
       <footer class="page">
-        <div class="knockback_credits"><p><em>Knockback</em> is brought you by <a href="https://github.com/kmalakoff">Kevin Malakoff</a>
-
-</p>
-<p>Designed by <a href="https://github.com/yuchi">Pier Paolo Ramon</a>
-</p>
+        <div class="knockback_credits"><p><em>Knockback</em> is brought you by <a href="https://github.com/kmalakoff">Kevin Malakoff</a></p>
+<p>Designed by <a href="https://github.com/yuchi">Pier Paolo Ramon</a></p>
 
         </div>
       </footer>
