--- a/tutorial_nested_models.html
+++ b/tutorial_nested_models.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="vendor/google-code-prettify/prettify.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/layout_components.css">
-    <script type="application/javascript" src="vendor/js/jquery-1.8.0.js"></script>
+    <script type="application/javascript" src="vendor/js/jquery-1.9.1.js"></script>
     <link rel="stylesheet" href="css/tutorial.css">
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.8.js"></script>
-    <script type="application/javascript" src="vendor/js/backbone-relational-0.7.0.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.17.0.js"></script>
+    <script type="application/javascript" src="vendor/js/backbone-relational-0.8.0plus.js"></script>
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="js/stylecode.js"></script>
@@ -33,23 +33,27 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="doc/index.html">API</a></li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Getting Started<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Components<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="components_backbone_relational.html">Backbone Relational</a><a href="components_backbone_modelref.html">Backbone ModelRef</a><a href="components_knockback_inspector.html">Knockback Inspector</a><a href="components_knockback_navigators.html">Knockback Navigators</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="components_backbone_relational.html">Backbone Relational</a><a href="components_backbone_modelref.html">Backbone ModelRef</a><a href="components_knockback_inspector.html">Knockback Inspector</a><a href="components_knockback_navigators.html">Knockback Navigators</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Applications<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="app_knockback_reference.html">Knockback Reference App</a><a href="app_todos.html">Todos App</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="app_knockback_reference.html">Knockback Reference App</a><a href="app_todos.html">Todos App</a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                  <ul role="menu" class="dropdown-menu">
+                    <li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    </li>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -100,16 +104,16 @@
 &lt;/div&gt;</pre>
                 </div>
                 <div id="kbnm_collection_observables_view_model" class="tab-pane">
-                  <pre data-for="cs">bob = new Backbone.Model({name: "Bob", friends: new Backbone.Collection()})
-fred = new Backbone.Model({name: "Fred", friends: new Backbone.Collection([bob])})
+                  <pre data-for="cs">bob = new Backbone.Model({name: &quot;Bob&quot;, friends: new Backbone.Collection()})
+fred = new Backbone.Model({name: &quot;Fred&quot;, friends: new Backbone.Collection([bob])})
 
-FriendViewModel = (model) ->
+FriendViewModel = (model) -&gt;
   @name = kb.observable(model, 'name')
   @type = ko.observable('friend')
   return
 
 class PersonViewModel extends kb.ViewModel
-  constructor: (model, options) ->
+  constructor: (model, options) -&gt;
     super
     @type = ko.observable('person')
 
@@ -122,8 +126,8 @@ view_model = {
 }
 
 ko.applyBindings(view_model, $('#kbnm_collection_observables')[0])</pre>
-                  <pre data-for="js">var bob = new Backbone.Model({name: "Bob", friends: new Backbone.Collection()});
-var fred = new Backbone.Model({name: "Fred", friends: new Backbone.Collection([bob])});
+                  <pre data-for="js">var bob = new Backbone.Model({name: &quot;Bob&quot;, friends: new Backbone.Collection()});
+var fred = new Backbone.Model({name: &quot;Fred&quot;, friends: new Backbone.Collection([bob])});
 
 var FriendViewModel = function(model) {
   this.name = kb.observable(model, 'name');
@@ -188,18 +192,18 @@ ko.applyBindings(view_model, $('#kbnm_collection_observables')[0]);
 &lt;/div&gt;</pre>
                 </div>
                 <div id="kbnm_view_models_view_model" class="tab-pane">
-                  <pre data-for="cs">bob = new Backbone.Model({name: "Bob"})
-fred = new Backbone.Model({name: "Fred", friends: new Backbone.Collection([bob])})
+                  <pre data-for="cs">bob = new Backbone.Model({name: &quot;Bob&quot;})
+fred = new Backbone.Model({name: &quot;Fred&quot;, friends: new Backbone.Collection([bob])})
 bob.set({friends: new Backbone.Collection([fred])})
 
-FriendViewModel = (model, options) ->
+FriendViewModel = (model, options) -&gt;
   @type = 'friend'
   @name = kb.observable(model, 'name')
   @friends = kb.collectionObservable(model.get('friends'), kb.utils.optionsPathJoin(options, 'friends'))
   return
 
 class PersonViewModel extends kb.ViewModel
-  constructor: (model, options) ->
+  constructor: (model, options) -&gt;
     @type = 'person'
     super
 
@@ -210,8 +214,8 @@ view_model = new PersonViewModel(fred, {
 })
 
 ko.applyBindings(view_model, $('#kbnm_view_models')[0])</pre>
-                  <pre data-for="js">var bob = new Backbone.Model({name: "Bob"});
-var fred = new Backbone.Model({name: "Fred", friends: new Backbone.Collection([bob])});
+                  <pre data-for="js">var bob = new Backbone.Model({name: &quot;Bob&quot;});
+var fred = new Backbone.Model({name: &quot;Fred&quot;, friends: new Backbone.Collection([bob])});
 bob.set({friends: new Backbone.Collection([fred])});
 
 var FriendViewModel = function(model, options) {
